# HPC-Clustering

./: .gitignore  CMakeLists.txt  analyze.py  benchmark_results.csv  br1_007.csv  br1_104.csv  coreset-ben.sh  coreset.py  coreset_ben.py  coreset_benchmark.csv  datasets.md  embed_plot.py  gen.py  gen2.py  mpi-v1.sh  mpi-v2.sh  omp-ben.py  parallel.excalidraw  perf-mpi.sh  perf.sh  plot.py  process.md  readme.md  run.sh  visualize.py
extrae/: clean.sh  extrae.xml  run.sh  trace.sh
html/: index.css  index.html  index.js  lib.js  mpiv1.js  mpiv2.js  serial.js
lib/: CoresetTree.hpp  assert.hpp  coreset.hpp  coreset_naive.hpp  coreset_opt1.hpp  coreset_opt2.hpp  coreset_opt3.hpp  coreset_plot.hpp  coreset_stream.hpp  coreset_stream_omp.hpp  coreset_stream_omp_ch.hpp  coreset_stream_serial.hpp  coreset_stream_tnaive.hpp  mpi_wrap.h  parser.hpp  perf.hpp  topo.hpp
src/ben-cache-l1d/: main.cpp
src/ben-coreset/: main.cpp
src/ben-mpi-coomm/: main.cpp
src/ben-mpi-scatter/: main.cpp
src/ff-v1/: main.cpp
src/mpi-minimal/: main.cpp
src/mpi-v1/: CoresetTree.hpp  ctold.hpp  main.cpp
src/mpi-v1.2/: Kmeans.hpp  main.cpp
src/mpi-v2/: CoresetTree.hpp  main.cpp  main.waitsome_flow_control
src/mpi-v3/: CoresetTree.hpp  main.cpp
src/mpi-v4/: main.cpp
src/naive/: main.cpp
src/omp-v1/: 1-crit-sect.cpp  2-crit-sects.cpp  CoresetStream.hpp  CoresetTree.hpp  main copy 2.cpp  main copy 3.cpp  main copy.cpp  main.cpp  recursive-approach.cpp  tmp.cpp
src/serial-v1/: CoresetStream.hpp  CoresetTree.hpp  main.cpp
src/serial-v2/: main copy.cpp  main.cpp  main.py
